Fix overflow on medium screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     border: none;
     box-sizing: border-box;
 }
-html {
+html{
     height: 100%;
     min-width: 100%;
 }
@@ -100,7 +100,7 @@ li a:hover {
 }
 
 /* Hamburger menu */
-/* .topnav {
+.topnav {
     overflow: hidden;
     background-color: rgb(82, 60, 60);
     position: relative;
@@ -188,7 +188,7 @@ li a:hover {
 
 #logo:hover {
     color: white;
-} 
+}
 /*
 .container-2 {
  
@@ -424,7 +424,6 @@ footer {
     background-repeat: no-repeat;
     grid-area: img1;
 }
-.topnav a 
 
 .footer#footer-p {
     background-color:rgb(114, 184, 231);
@@ -435,7 +434,7 @@ footer#footer{
 
 
 /* Form */
-/* form {
+form {
     display: table;
 }
 
@@ -531,8 +530,8 @@ option {
     border-radius: 8px;
     margin: 20px 0 20px 0;
     background: rgb(185, 180, 180);
-    cursor: pointer; }*/
-
+    cursor: pointer;
+}
 /* Playground page */
 .background-playground {
     background-color: rgba(107, 170, 128, 0.877);
@@ -636,9 +635,11 @@ span#march-title {
     .nav #menu {
         display: none;
     }
+    
     div.topnav{
       display:contents !important;
       }
+
     #pool-title,
     #playground-title,
     #gym-title,
@@ -646,13 +647,16 @@ span#march-title {
     #march-title {
         font-size: 1.4em;
     }
+
     .intro-text-box,
     .intro-text-box1 {
         font-size: 1em;
     }
+
     .footer {
         font-size: .8em;
     }
+
     .pool-text,
     .playground-text,
     .gym-text,
@@ -691,10 +695,16 @@ span#march-title {
         width: 100%;
         height: 150%;
     }
+
       .container-1 p {
         grid-template-columns: 70%;
         font-size: .7em;
         top: 250px;
+    }
+
+    html, body {
+        
+        overflow-x: hidden;
     }
     #menu {
         display: flex;
